Fixed css so it still looks normal on small screens.

--- a/backend/server/frontend/public/styles/main.css
+++ b/backend/server/frontend/public/styles/main.css
@@ -2241,7 +2241,7 @@ a {
 }
 
 
-@media (min-width: 992px) {
+@media (min-width: 438px) {
 
     .col-md-1,
     .col-md-10,
